--- a/index.html
+++ b/index.html
@@ -2,12 +2,144 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>The Witcher</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <header>
+      <div class="container">
+        <div class="header">
+          <img src="public/logo.png" alt="logo" class="logo">
+
+          <nav class="menu-list">
+            <a href="#" class="menu-link">Описание</a>
+            <a href="#" class="menu-link">Трейлер</a>
+            <a href="#" class="menu-link">Отзывы</a>
+          </nav>
+
+          <div class="social">
+            <a href="#" class="social-link"><img src="public/social/twitter.svg" alt="twitter"></a>
+            <a href="#" class="social-link"><img src="public/social/instagram.svg" alt="instagram"></a>
+            <a href="#" class="social-link"><img src="public/social/facebook.svg" alt="facebook"></a>
+          </div>
+        </div>
+        <!-- /.header -->
+      </div>
+      <!-- /.container -->
+    </header>
+
+    <main>
+      <div class="container">
+        <div class="main-content">
+          <div class="content">
+            <span class="genre">2019, фэнтези</span>
+
+            <div class="rating">
+              <div class="rating-stars">
+                <img src="public/rating-stars.svg" alt="rating">
+              </div>
+              <div class="rating-number">7/10</div>
+            </div>
+
+            <h1 class="main-title">
+              Ведьмак
+            </h1>
+
+            <p class="main-description">
+              Ведьмак Геральт, мутант и убийца чудовищ, на своей верной лошади по кличке Плотва путешествует по Континенту. За тугой мешочек чеканных монет этот мужчина избавит вас от всякой настырной нечисти — хоть от чудищ болотных, оборотней и даже заколдованных принцесс.
+            </p>
+
+            <button class="button">Смотреть онлайн</button>
+
+          </div>
+          <button class="play">
+            <img class="play-img" src="public/play-button.svg" alt="play">
+          </button>
+        </div>
+        <div class="series">
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="card card-1">
+                  <span class="card-subtitle">Серия #1</span>
+                  <h2 class="card-title">Начало конца</h2>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="card card-2">
+                  <span class="card-subtitle">Серия #2</span>
+                  <h2 class="card-title">Четыре знака</h2>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="card card-3">
+                  <span class="card-subtitle">Серия #3</span>
+                  <h2 class="card-title">Предательская луна</h2>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="card card-4">
+                  <span class="card-subtitle">Серия #4</span>
+                  <h2 class="card-title">О банкетах, бастардах и захоронениях</h2>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="card card-5">
+                  <span class="card-subtitle">Серия #5</span>
+                  <h2 class="card-title">Желание в бутылке</h2>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="card card-6">
+                  <span class="card-subtitle">Серия #6</span>
+                  <h2 class="card-title">Редкие виды</h2>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="card card-7">
+                  <span class="card-subtitle">Серия #7</span>
+                  <h2 class="card-title">Перед падением</h2>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="card card-8">
+                  <span class="card-subtitle">Серия #8</span>
+                  <h2 class="card-title">Нечто большее</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="arrow"></button>
+          <!-- /.swiper -->
+        </div>
+      </div>
+      <!-- /.container -->
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="left">
+            <span class="copyright">© 2020 The Witcher. All right reserved.</span>
+          </div>
+          <div class="right">
+            <nav class="footer-menu">
+              <a href="#" class="footer-link">Privacy Policy</a>
+              <a href="#" class="footer-link">Terms of Service</a>
+              <a href="#" class="footer-link">Legal</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+  <script src="js/swiper.min.js"></script>
+  <script src="js/main.js"></script>
   </body>
 </html>
