--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           </div>
         </div>
         <!-- /.header -->
+        <div class="menu-button"></div>
       </div>
       <!-- /.container -->
     </header>
